--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
   }
