--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "later": "^1.2.0",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "pg": "^8.6.0",
